2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/web2c.ac: Drop configure option --disable-omfonts.
	* configure.ac: Drop Automake conditional OMFONTS.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop the obsolete NATIVE_TEXLIVE_BUILD.

2014-05-20  Karl Berry  <karl@tug.org>

	* doc/web2c.texi (Languages and hyphenation): consistent
	ordering in menu vs. sectioning.

2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Update to e-pTeX and e-upTeX from Akira Kakuto.
	* texmfmp.h (getfiledump): Move declaration from
	pdftexdir/ptexlib.h to here.

2014-05-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicopy.ch, dvicopy.web: Fixed a non-Web2C bug and several
	typos, mostly from Udo Wermuth <u.wermuth@icloud.com>.

2014-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mftraptest: Separate generic and capsule diffs.
	* triptest: Separate generic and glue rounding diffs.
	* triptrap/{mftrap,mptrap,trip}.diffs: Updated for TL14.

2014-03-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use LUAJIT_LDEXTRA instead of luajittex_extra.

2014-02-23  Karl Berry  <karl@tug.org>

	* mftraptest,
	* triptest,
	* triptrap/README: a bit more discussion of acceptable diffs,
	and use *** more emphatic text if the tests fail.

2014-02-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Add @LUAJIT_RULE@.
	* ac/web2c.ac: Add LuaJITTeX.
	* configure.ac: Add KPSE_LUAJIT_DEFINES and KPSE_LUAJIT_FLAGS.
	Compute and substitute luajittex_extra for darwin64.

2014-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap/trip.diffs: Updated for TeX 3.14159265.

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* gftopk.web, mf.web, pltotf.web, tex.web, tftopl.web,
	vftovp.web, vptovf.web: Import new versions from Knuth and
	remove some trailing white space.
	* gftopk.ch, pltotf.ch, tex.ch, tftopl.ch, vftovp.ch, vptovf.ch,
	mftraptest: Adapted.
	* triptrap/{mftrap.fot,mftrap.log,mftrapin.log,trap.typ},