@@ -1,3 +1,8 @@
+2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* configure.ac: Check for StructTreeRoot.h> (poppler 0.25 or
+	better) and define HAVE_STRUCTTREEROOT_H if found.
+	
 2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* ac/web2c.ac: Drop configure option --disable-omfonts.
